// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Action /> with an element icon should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root-441 HvListItem-root-449 HvListItem-gutters-450 HvListItem-interactive-451 HvFocus-root-460 HvFocus-focusDisabled-463"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography-444 HvTypography-root-468 HvTypography-normalText-481"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon-445"
      >
        <div
          class="HvIconBase-root-490 HvIconBase-s-492"
          data-testid="tool-icon"
          name="Tool"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M4.79431 14.03412l4.59619-4.5962.49494.07061a3.97211 3.97211 0 003.39415-1.13127 4.01469 4.01469 0 001.03528-3.86371L12.987 5.84145l-.41363.00069h-2.41551V3.42665l.00069-.41363 1.3279-1.32789a4.01606 4.01606 0 00-3.86371 1.03528 3.97211 3.97211 0 00-1.13127 3.39415l.07061.49494-4.5962 4.59619 2.82843 2.82843m0 1.41421L.55167 11.20569l4.94975-4.94975a5.00069 5.00069 0 017.70739-4.879l-2.05054 2.05058v1.41421h1.41421L14.623 2.79119a5.01258 5.01258 0 01-.63632 6.29318 4.96269 4.96269 0 01-4.24264 1.41421z"
              fill="#414141"
            />
          </svg>
        </div>
      </div>
      <span
        class="HvAppSwitcherAction-title-446 HvTypography-root-468 HvTypography-highlightText-480"
        data-mui-internal-clone-element="true"
      >
        Mock App 1
      </span>
    </a>
  </li>
</div>
`;

exports[`<Action /> with description should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root-1 HvListItem-root-9 HvListItem-gutters-10 HvListItem-interactive-11 HvFocus-root-20 HvFocus-focusDisabled-23"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography-4 HvTypography-root-28 HvTypography-normalText-41"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon-5"
      >
        <img
          alt="Mock App 1 Description"
          class="HvAppSwitcherAction-iconUrl-8"
          src="http://mockapp1/icon"
        />
      </div>
      <span
        class="HvAppSwitcherAction-title-6 HvTypography-root-28 HvTypography-highlightText-40"
        data-mui-internal-clone-element="true"
      >
        Mock App 1
      </span>
      <div
        class=""
        data-mui-internal-clone-element="true"
      >
        <div
          aria-label="Mock App 1 Description"
          class="HvAppSwitcherAction-iconInfo-7 HvIconBase-root-61 HvIconBase-s-63"
          name="Info"
          role="img"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
              fill="#414141"
            />
          </svg>
        </div>
      </div>
    </a>
  </li>
</div>
`;

exports[`<Action /> without description should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root-261 HvListItem-root-269 HvListItem-gutters-270 HvListItem-interactive-271 HvFocus-root-280 HvFocus-focusDisabled-283"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography-264 HvTypography-root-288 HvTypography-normalText-301"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon-265"
      >
        <img
          class="HvAppSwitcherAction-iconUrl-268"
          src="http://mockapp1/icon"
        />
      </div>
      <span
        class="HvAppSwitcherAction-title-266 HvTypography-root-288 HvTypography-highlightText-300"
        data-mui-internal-clone-element="true"
      >
        Mock App 1
      </span>
    </a>
  </li>
</div>
`;
